--- a/src/components/TocItem/TocItem.scss
+++ b/src/components/TocItem/TocItem.scss
@@ -35,6 +35,10 @@
 
         color: var(--g-color-text-primary);
 
+        @media (max-width: map-get($screenBreakpoints, 'md')) {
+            padding: 10px 12px 10px 28px;
+        }
+
         [dir='rtl'] & {
             padding: 7px 20px 7px 12px;
         }
